--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.293.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "react": "^18",
